# smart-automation

./: README.md  SimuLinkJuanResolvido.ipynb  tabu_search_results_2024-04-27.json
Exemplo AG - Python/: AGBinario.ipynb
RNAs/: README.md
auto_fuzzy_dashboard/: pyproject.toml
auto_fuzzy_dashboard/dashboard/: main.py  pyproject.toml
auto_fuzzy_dashboard/dashboard/examples/: senusoid.py
auto_fuzzy_dashboard/dashboard/fuzzy/: auto_rules_generator.py  fuzzy_system_regressor.py  variable.py
ava01/: data_semanal.csv  data_semanal.parquet  entregavel04.ipynb
ava01/data/: x_test.csv  x_train.csv  y_test.csv
ava01/rna1/: ent2_entradas_n_normhistory.csv  ent2_entradashistory.csv
ava01/rna2/: ent2_entradas_n_normhistory.csv  ent2_entradas_normhistory.csv
ava02/: Cópia_de_Fuzzy_Estagio_Docencia_01.ipynb  ava02_pt1_miguel.ipynb  environment.yml  requirements.txt
ava02/matlab/: smart_air_condition_system.fis
ava02/pt1/: README.md  regras.csv  (+1 more)
ava03/: config_environment.sh
clusterizacao/: Clusterização.ipynb
data/: README.md
fuzzy/: Docencia_02 (1).ipynb  Fuzzy_Estagio_Docencia_01.ipynb  test_read_fis_file.py
fuzzy/fuzzy/: pyproject.toml
fuzzy/fuzzy/fuzzy/: system_constructor.py
fuzzy/fuzzy/fuzzy/class/: __init__.py  input.py  output.py  rules.py  system.py
max_transfer_potencia/: README.md  max_pot.py  max_potencia_ag.ipynb
pso/: PSO_Ackley_Optimal.ipynb
utils/: MyKNN.py  README.md  __mlflow.py  __read_data.py  build_model.py  callbacks.py  concat_csvs.py  create_figures.py  create_mae_mse_rmse_figures.py  get_metrics.py  miscellaneous.py
(+115 files in other folders)
