[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = ""
authors = ["Miguel Marques Ferreira <miguel.ferreira@cear.ufpb.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.32.2"
pandas = "^2.2.1"
numpy = "^1.26.4"
plotly = "^5.20.0"
matplotlib = "^3.8.3"
simpful = "^2.12.0"
pydantic = "^2.6.4"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
